<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/meal_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="0dp"
    android:foreground="?selectableItemBackground"
    android:visibility="visible"
    app:cardElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false">

    <View
        android:id="@+id/topMealDivider_ID"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:id="@+id/llmeal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:longClickable="true"
        android:onClick="itemClick"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:srcCompat="@drawable/taco" />

        <TextView
            android:id="@+id/mealNameTxtVw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="24dp"
            android:lineSpacingExtra="8sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/appetizerHdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="24dp"
                android:text="@string/appetizer_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/appetizerNameTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/entreeHdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="24dp"
                android:text="@string/entree_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/entreeNameTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sideHdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="24dp"
                android:text="@string/side_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/sideNameTxtVw_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dessertHdr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:elevation="24dp"
                android:text="@string/dessert_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:visibility="visible" />

            <TextView
                android:id="@+id/dessertNameTxtVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/bottomMealDivider_ID"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha="155"
        android:background="@android:color/black"
        android:elevation="0dp" />

</android.support.v7.widget.CardView>